# KULAK_declaratieve-talen

./: .gitignore  23.md
1. Prolog/: dl.pl  search.pl
1. Prolog/Examen/: allerlei.pl  bwgk.pl  dl.pl  freeze.pl  p.pl  select.pl
1. Prolog/HC/: bomen.pl  smallstuff.pl
1. Prolog/OZ1/: idefix.pl
1. Prolog/OZ2/: hc.pl  oplossing.pl
1. Prolog/OZ3/: hc.pl  oplossing.pl  oz3.pl
1. Prolog/OZ4/: oplossing.pl
1. Prolog/OZ5/: oplossing.pl  oz5.pl
1. Prolog/TTT/: redo.pl
2. Haskell/: hoorcollege.hs  showTree.hs  simpleM.hs  unnaturalM.hs  zeef.hs
2. Haskell/Examen/: 2021.hs  allerlei.hs  io.hs  priem.hs  simpleM.hs
2. Haskell/HC/: CHANGELOG.md  HC.cabal  package.yaml
2. Haskell/OZ1/: first_file.hs  haskell.md  modeloplossing.hs  oef1.hs  oef2.hs  oef3.hs  oef4.hs  oef5.hs  oef6.hs  oef7.hs  oef8.hs
2. Haskell/OZ2/: modeloplossing.hs  oef1.hs  oef2.hs  oef3.hs  oef4.hs  oef5.hs  oef6.hs  oef7.hs  oef8.hs  oef9.hs
2. Haskell/OZ3/: modeloplossing.hs  oef1.hs  oef2.hs  oef3-bis.hs  oef3.hs  oef4.hs  oef5.hs  oef6.hs
Examen/: CHANGELOG.md  Examen.cabal  LICENSE  arne.pl  collatz.hs  collatz.pl  examen.md
Examen/2021/: 3.md
Examen/2025/: ingediend.hs  ingediend.pl  oef.hs  star_input.pl  verbeterd.pl
Examen/app/: Main.hs
Examen/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
HC/: bwgk.pl
OZ1/: idefix.pl  oplossing.pl
OZ2/: oz2.pl  uitvoeringsboom_hc.pl
OZ2/opl/: opdracht2.pl
OZ3/: lpn.pl  oplossing.pl  oz3.pl
OZ4/: les.pl  oz4.pl
OZ5/: oz5.pl
TTT/: ttt.pl
(+30 files in other folders)
