cabal-version:   3.8
name:            Examen
version:         0.1.0.0
license:         NONE
author:          Vincent Van Schependom
maintainer:      vincent.van.schependom@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Examen
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1, containers
    hs-source-dirs:   app
    default-language: Haskell2010
